# plain-cache

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cache.rs  lib.rs
src/cache/: entry.rs  fixed_size_hash_table.rs  ring_buffer.rs  shard.rs  stats.rs
