[package]
name = "plain-cache"
version = "0.1.1"
edition = "2024"
authors = ["Christian Schleifer <chr.schleifer@gmail.com>"]
description = "Highly performant thread-safe cache with a focus on simplicity"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ahash = "0.8"
parking_lot = "0.12"
